--- a/online-theraphy/src/Components/Nav/Nav.css
+++ b/online-theraphy/src/Components/Nav/Nav.css
@@ -28,7 +28,7 @@
 }
 
 .header .navbar img {
-  width: 250px;
+  width: 230px;
   height: auto;
 }
 
@@ -89,3 +89,4 @@
     width: 150px;
   }
 }
+ /**/
