--- a/online-theraphy/src/Components/routes/Home.css
+++ b/online-theraphy/src/Components/routes/Home.css
@@ -8,7 +8,7 @@
 
 .home:before {
     content: '';
-    background: url('/online-theraphy/src/Components/Nav/img/img1.jpg') no-repeat center center/cover;
+    background: url('./img/img1.jpg') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     position: absolute;
