--- a/online-theraphy/src/Components/routes/Home.css
+++ b/online-theraphy/src/Components/routes/Home.css
@@ -1,71 +1,69 @@
 .home {
-    background-color: var(--overlay);
-    color: #fff;
-    height: 100vh;
-    width: 100%;
-    position: relative;
+  color: #fff;
+  height: 100vh;
+  width: 100%;
+  position: relative;
 }
 
 .home:before {
-    content: '';
-    background: url('./img/img1.jpg') no-repeat center center/cover;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+  content: "";
+  background: url("./img/img1.jpg") no-repeat center center/cover;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .home .content {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 1100px;
-    margin: auto;
-    padding: 1rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1100px;
+  margin: auto;
+  padding: 1rem;
 }
 
 .home .content p:first-child {
-    font-style: italic;
-    font-size: .9rem;
+  font-style: italic;
+  font-size: 0.9rem;
 }
 
 .home .content p:nth-child(2) {
-    font-size: 1.9rem;
+  font-size: 1.9rem;
 }
 
 .home .content p:nth-child(3) {
-    font-size: 5rem;
-    font-weight: 700;
+  font-size: 5rem;
+  font-weight: 700;
 }
 
-
 .home .content p:nth-child(4) {
-    font-size: 2.2rem;
-    font-style: italic;
+  font-size: 2.2rem;
+  font-style: italic;
 }
 
 .home .button {
-    margin: 1rem 0;
-    width: 300px;
-    background-color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
-    color: #333;
+  margin: 1rem 0;
+  width: 300px;
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  color: #333;
 }
 
 .home .button:hover {
-    background-color: var(--secondary-dark);
-    border: 1px solid var(--secondary-dark);
+  background-color: var(--secondary-dark);
+  border: 1px solid var(--secondary-dark);
 }
 
-@media screen and (max-width:940px) {
-    .home .content p:nth-child(3) {
-        font-size: 2.6rem;
-    }
+@media screen and (max-width: 940px) {
+  .home .content p:nth-child(3) {
+    font-size: 2.6rem;
+  }
 
-    .home .content p:nth-child(4) {
-        font-size: 1.6rem;
-    }
+  .home .content p:nth-child(4) {
+    font-size: 1.6rem;
+  }
 }
