--- a/online-theraphy/src/Components/routes/Home.css
+++ b/online-theraphy/src/Components/routes/Home.css
@@ -7,7 +7,7 @@
 
 .home:before {
   content: "";
-  background: url("./img/img1.jpg") no-repeat center center/cover;
+  background: url("./img/about-us.jpg") no-repeat center center/cover;
   height: 100%;
   width: 100%;
   position: absolute;
