--- a/online-theraphy/src/Components/routes/Home.css
+++ b/online-theraphy/src/Components/routes/Home.css
@@ -1,21 +1,21 @@
+.main {
+  content: "";
+  background: url("./img/about-us.jpg");
+  height: 400%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 .home {
   color: #fff;
   height: 100vh;
   width: 100%;
   position: relative;
 }
-
-.home:before {
-  content: "";
-  background: url("./img/about-us.jpg") no-repeat center center/cover;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
 .home .content {
   height: 100%;
   display: flex;
